--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@ a{
 header{
     width: 100%;
     height: 15vh;
-    background-color: #435334;
+    background-color: #618264;
     border-bottom: solid #343434 2px;
     display: flex;
     justify-content: center;
@@ -27,7 +27,7 @@ ul{
     align-items: center;
 }
 li{
-    color: #343434;
+    color: #;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ li{
 li:hover{
     transition: 0.5s;
     color: #435334;
-    background-color: #9EB384;
+    background-color: #79AC78;
     border-radius: 8px;
 }
 
@@ -49,7 +49,7 @@ li:hover{
 #selection-banner{
     width: 100%;
     height: 50vh;
-    background-image: url(mancha.jpg);
+    background-image: url(palmeirasbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -58,7 +58,7 @@ li:hover{
 #section-cards{
  width: 100%;
  height: 60vh;
- background-color: #9EB384;
+ background-color: #79AC78;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
