--- a/estilo.css
+++ b/estilo.css
@@ -27,7 +27,7 @@ ul{
     align-items: center;
 }
 li{
-    color: #;
+    color: white;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -67,12 +67,21 @@ li:hover{
 .card{
     width: 20%;
     height: 60%;
-    border: 1px solid black;
+    border: 2px solid #435334;
 
 }
 
+.img-card{
+    width: 100%;
+    height: 70%;
+    background-color: #618264;
+}
 
-
+.text-card{
+    width: 100%;
+    height: 30%;
+    background-color: #B0D9B1;
+}
 
 
 
