--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300&family=Staatliches&family=Yanone+Kaffeesatz&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Signika:wght@300&family=Staatliches&display=swap');
 *{
    margin: 0;
@@ -40,7 +41,7 @@ li{
 li:hover{
     transition: 0.5s;
     color: #435334;
-    background-color: #79AC78;
+    background-color: #D0E7D2;
     border-radius: 8px;
 }
 
@@ -58,7 +59,7 @@ li:hover{
 #section-cards{
  width: 100%;
  height: 60vh;
- background-color: #79AC78;
+ background-color: #D0E7D2;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
@@ -81,6 +82,7 @@ li:hover{
     width: 100%;
     height: 30%;
     background-color: #B0D9B1;
+    font-family: 'Staatliches', cursive;
 }
 
 
