--- a/estilo.css
+++ b/estilo.css
@@ -41,7 +41,7 @@ li{
 li:hover{
     transition: 0.5s;
     color: #435334;
-    background-color: #D0E7D2;
+    background-color: #B0D9B1;
     border-radius: 8px;
 }
 
@@ -68,7 +68,7 @@ li:hover{
 .card{
     width: 20%;
     height: 60%;
-    border: 2px solid #435334;
+    border: 3px solid #435334;
 
 }
 
@@ -82,7 +82,25 @@ li:hover{
     width: 100%;
     height: 30%;
     background-color: #B0D9B1;
+    
+}
+
+.titulo-card{
     font-family: 'Staatliches', cursive;
+    font-size: 125%;
+    text-align: start;
+    
+}
+
+.text-card{
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.p-card{
+    font-size: 80%;
+    text-align: end;
+    
 }
 
 
