--- a/estilo.css
+++ b/estilo.css
@@ -63,13 +63,19 @@ li:hover{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
+
 }
 
 .card{
     width: 20%;
     height: 60%;
     border: 3px solid #435334;
-
+    box-shadow: 20px 20px 50px  rgba(0, 0, 0, 0.521);
+    transition: 0.5s;
+}
+.card:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
 }
 
 .img-card{
@@ -100,9 +106,25 @@ li:hover{
 .p-card{
     font-size: 80%;
     text-align: end;
-    
+
+}
+#secao3{
+    height: 60vh;
+    width: 100%;
+    background-color: #B0D9B1;
+    display: flex;
+    align-items: center flex;
+    justify-content: space-around;
 }
 
+#text-secao3{
+    width: 40%;
+    font-family: 'Staatliches', cursive;
+}
+#img-secao3{
+    align-items: flex-end;
+    
+}
 
 
 
